--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "npm": "^10.9.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
